# Requirements Update (requirements will need to be reinstalled)
Updated pillow requirement to 9.5.0
Updated plexapi requirement to 4.13.4
New requirement GitPython version 3.1.31

# New Features
Added `episode_year` as a dynamic collection option.
Added `mass_studio_update` [library operation](https://metamanager.wiki/en/latest/config/operations.html#mass-studio-update).
Changes Environment Variable/Run Argument list separator from `,` to `|`.
Added `PMM_LOG_REQUESTS`/`--log-requests` Environment Variable/Run Argument which will log every single HTTP request in the log.
Added EXIF Tags to Overlayed Images to be able to determine if they have an overlay or not.
Added `anidb`, `anidb_3_0`, `anidb_2_5`, `anidb_2_0`, `anidb_1_5`, `anidb_1_0`, `anidb_0_5` options to the [`mass_genre_update` Library Operation](https://metamanager.wiki/en/latest/config/operations.html#mass-genre-update).
Added `ignore_cache` to [`radarr`](https://metamanager.wiki/en/latest/config/radarr.html) and [`sonarr`](https://metamanager.wiki/en/latest/config/sonarr.html) Settings and `radarr_ignore_cache` and `sonarr_ignore_cache` to [Radarr/Sonarr Definition Settings](https://metamanager.wiki/en/latest/metadata/details/arr.html).
Closes #1286 Updates Synology Walkthrough with DSM7 images.
Closes #1159 Adds support for official trakt lists.
Closes #1251 When resetting Overlays Seasons where theres no poster will use the show poster.
Templates can now be used with metadata updates.
`allowed_library_types` Definition Setting has been changed to `run_definition` the old attribute will still work in the same way.
Added `mapping_id`, `run_definition`, `update_seasons`, and `update_episodes` to Metadata definitions.
Added a [Ratings Explained](https://metamanager.wiki/en/latest/home/guides/ratings.html) page to the Wiki to help explain how PMM interacts with the various Ratings.