@@ -15,14 +15,14 @@ plex:
   optimize: false
 ```
 
-| Attribute       | Allowed Values                                                                                                                   | Default | Required |
-|:----------------|:---------------------------------------------------------------------------------------------------------------------------------|:--------|:--------:|
-| `url`           | Plex Server URL or `ENV` (This will use the Environment/Runtime Plex URL)<br><strong>Example:</strong> http://192.168.1.12:32400 | N/A     | &#9989;  |
-| `token`         | Plex Server Authentication Token or `ENV` (This will use the Environment/Runtime Plex URL)                                       | N/A     | &#9989;  |
-| `timeout`       | Plex Server Timeout                                                                                                              | 60      | &#10060; |
-| `clean_bundles` | Runs Clean Bundles on the Server after all Metadata Files are run                                                                | false   | &#10060; |
-| `empty_trash`   | Runs Empty Trash on the Server after all Metadata Files are run                                                                  | false   | &#10060; |
-| `optimize`      | Runs Optimize on the Server after all Metadata Files are run                                                                     | false   | &#10060; |
+| Attribute       | Allowed Values                                                                                                                 | Default | Required |
+|:----------------|:-------------------------------------------------------------------------------------------------------------------------------|:--------|:--------:|
+| `url`           | Plex Server URL<br><strong>Example:</strong> http://192.168.1.12:32400                                                         | N/A     | &#9989;  |
+| `token`         | Plex Server Authentication Token                                                                                               | N/A     | &#9989;  |
+| `timeout`       | Plex Server Timeout                                                                                                            | 60      | &#10060; |
+| `clean_bundles` | Runs Clean Bundles on the Server after all Metadata Files are run                                                              | false   | &#10060; |
+| `empty_trash`   | Runs Empty Trash on the Server after all Metadata Files are run                                                                | false   | &#10060; |
+| `optimize`      | Runs Optimize on the Server after all Metadata Files are run                                                                   | false   | &#10060; |
 
 * **Do Not Use the Plex Token found in Plex's Preferences.xml file**
 
